fixed triangle covering text

--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -5,4 +5,5 @@
   z-index: 0;
   width: 877px;
   height: 877px;
+  z-index: 0;
 }
