--- a/blocks/section-subtitle/_theme/section-subtitle_theme_dark.css
+++ b/blocks/section-subtitle/_theme/section-subtitle_theme_dark.css
@@ -1,4 +1,3 @@
 .section-subtitle_theme_dark {
-  background-color: var(--background-dark);
   color: var(--off-white-color);
 }
