--- a/blocks/section-title/_theme/section-title_theme_dark.css
+++ b/blocks/section-title/_theme/section-title_theme_dark.css
@@ -1,5 +1,4 @@
 .section-title_theme_dark {
   padding-top: 90px;
-  background-color: var(--background-dark);
   color: var(--off-white-color);
 }
